tests/snapshots/snapshot_golden_master__gm_work_order_workspace_first_passthrough.snap
---
source: tests/snapshot_golden_master.rs
expression: wo
---
{
  "id": "cccccccc-dddd-4eee-8fff-aaaaaaaaaaaa",
  "task": "Observe only",
  "lane": "workspace_first",
  "workspace": {
    "root": ".",
    "mode": "pass_through",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": null,
    "vendor": {},
    "env": {},
    "max_budget_usd": null,
    "max_turns": null
  }
}
